<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.projectui.MainActivity" >
    
    <LinearLayout
        android:layout_width="fill_parent"
       android:layout_height="wrap_content"
        
        android:orientation="horizontal">
        
        <TextView
	        android:id="@+id/bstatus"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/bt_status" />
            
        <TextView
	        android:id="@+id/bt_status_info"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/bt_conn" />
        
   </LinearLayout>
   
    <LinearLayout
        android:layout_width="fill_parent"
       android:layout_height="wrap_content"
        
        android:orientation="horizontal">
        
        <TextView
	        android:id="@+id/bconntolabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/bt_connected_to_label" />
            
        <TextView
	        android:id="@+id/bconnto"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/bt_connected_to" />
        
   </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="10dip"
        android:orientation="vertical">

        <TextView
	        android:id="@+id/t3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/flag" />
        
        <ListView
        android:id="@+id/in"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">

        <Button
	        android:id="@+id/ultraButton2001"
	        android:background = "@drawable/rounded_red_buttons"
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	        android:layout_marginTop="10dip"
	        android:text="@string/record" />
        
    </LinearLayout>

</LinearLayout>

